--- a/frontier/pom.xml
+++ b/frontier/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.mandrel</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.0.12</version>
+		<version>0.0.13-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>frontier</artifactId>
