--- a/core/pom.xml
+++ b/core/pom.xml
@@ -36,6 +36,10 @@
 			<artifactId>commons-pool2</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 		</dependency>
