Configure spring-boot for Maven

--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -261,7 +262,8 @@
 						<phase>generate-resources</phase>
 						<configuration>
 							<target>
-								<copy todir="${basedir}/src/main/resources/public/fonts" flatten="true">
+								<copy todir="${basedir}/src/main/resources/public/fonts"
+									flatten="true">
 									<fileset dir="${project.build.directory}/generated-resources/fonts">
 										<include name="**/*.woff" />
 										<include name="**/*.woff2" />
@@ -313,6 +315,15 @@
 						<exlude>*.yml</exlude>
 						<exlude>*.xml</exlude>
 					</excludes>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring-boot.version}</version>
+				<configuration>
+					<mainClass>io.mandrel.bootstrap.Controller</mainClass>
 				</configuration>
 			</plugin>
 
