--- a/pom.xml
+++ b/pom.xml
@@ -430,7 +430,7 @@
 			<dependency>
 				<groupId>org.webjars</groupId>
 				<artifactId>swagger-ui</artifactId>
-				<version>2.0.24</version>
+				<version>2.1.8-M1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.webjars</groupId>
