--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-.classpath
-.project
-.settings/
-target/
-bin/
+*.idea
+*.idea/**
+*.iml
+*.ipr
+target
+*.project
+*.classpath
+*.iws
+*.settings/**
+bin
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
