--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -100,6 +100,10 @@
 			<groupId>org.webjars</groupId>
 			<artifactId>jquery-knob</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>jsoneditor</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.freemarker</groupId>
