Use local address for netty in standalone running mode

--- a/mandrel-standalone/src/main/resources/standalone.yml
+++ b/mandrel-standalone/src/main/resources/standalone.yml
@@ -28,6 +28,7 @@ discovery:
 transport:
   port: 8090
   bindAddress: localhost
+  local: true
                                 
 logging:
   console:
