--- a/pom.xml
+++ b/pom.xml
@@ -303,6 +303,11 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+			<dependency>
+				<groupId>commons-net</groupId>
+				<artifactId>commons-net</artifactId>
+				<version>3.4</version>
+			</dependency>
 
 			<dependency>
 				<groupId>io.netty</groupId>
