--- a/mandrel-core/pom.xml
+++ b/mandrel-core/pom.xml
@@ -234,6 +234,10 @@
 			<groupId>org.apache.zookeeper</groupId>
 			<artifactId>zookeeper</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.atomix</groupId>
+			<artifactId>atomix-all</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
