--- a/pom.xml
+++ b/pom.xml
@@ -516,6 +516,11 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+			<dependency>
+				<groupId>io.atomix</groupId>
+				<artifactId>atomix-all</artifactId>
+				<version>1.0.0-rc2</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.apache.kafka</groupId>
