--- a/mandrel-standalone/src/main/resources/standalone.yml
+++ b/mandrel-standalone/src/main/resources/standalone.yml
@@ -12,10 +12,13 @@ spring:
 
 #discovery:
 #  instanceHost: localhost
+#   atomix:
+#     enabled: false
 #  zookeeper:
 #    enabled: true
 #    connectString: localhost:2181
 #    root: /mandrel
+#
 
 discovery:
   instanceHost: localhost
